# pid-transit

./: .gitignore  README.md  demo.py  pyproject.toml
.claude/: settings.local.json
benchmark/: CHOUETTE_PLAN.md  MACHINE.md  PATHB_PLAN.md  RESULTS.md  bench.py  headtohead.py
benchmark/bench/: Dockerfile.bench  README.md  chouette_bench.py  chouette_results.json  docker-compose.yml
benchmark/bench/runner/: export.rb  import.rb  seed.rb
benchmark/figures/: README.md  make_figures.py
benchmark/results/: headtohead.json  pid_transit.json  pid_transit.md
benchmark/results_gtfs_import/: pid_transit.json  pid_transit.md
benchmark/results_linux/: pid_transit.json  pid_transit.md
benchmark/results_netex_fix/: pid_transit.json  pid_transit.md
docs/: architecture.md  formalization.md
src/pid_transit/: README.md  __init__.py  cli.py
src/pid_transit/adapters/: __init__.py  gtfs_exporter.py  gtfs_importer.py  netex_exporter.py  netex_importer.py  spreadsheet_importer.py
src/pid_transit/analytics/: __init__.py  diff.py  merge.py  rt_readiness.py  statistics.py
src/pid_transit/core/: __init__.py  database.py  dataset.py  exceptions.py  repositories.py  schemas.py  validator.py
src/pid_transit/legacy/: __init__.py  database.py  exporter.py  importer.py  schemas.py  validator.py
tests/: conftest.py  test_cli.py  test_database.py  test_diff.py  test_importer_exporter.py  test_merge.py  test_netex_importer.py  test_repositories.py  test_rt_readiness.py  test_schemas.py  test_statistics.py
