[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pid-transit"
version = "0.2.0"
description = "A comprehensive transit data library based on Transmodel, supporting GTFS and NeTEx."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "PID-Transit contributors" }]
dependencies = [
    "pydantic>=2.0",
    "openpyxl>=3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pid_transit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
